--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
+
+*{
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  font-size: 14px;
+  font-family: 'Raleway', sans-serif;
+}
+
+@media screen and (min-width: 767px){  
+.gb-box:before{
+  content:"";
+  display:inline-block;
+  border-style:solid;
+  border-width:28px 0px 0px 25px;
+  border-color:white transparent;
+  position:absolute;
+  bottom:-20px;
+  right:0px;
+}
 }
